Bug 61704 - Writer Dialog Boxes: Enter like Esc, must click to button OK
Summary: Writer Dialog Boxes: Enter like Esc, must click to button OK
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.6.2 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-02 18:23 UTC by Zoltán Hegedüs
Modified: 2014-02-17 16:21 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Zoltán Hegedüs 2013-03-02 18:23:28 UTC
Format - Columns: I modified the spacing. If I push Enter, the spacing always remains, varies only when I click the button OK.
Comment 1 Brenda Granados 2013-03-06 18:27:31 UTC
Here is what I did to reproduce your problem:

1. Create a page of text (or use existing). Highlight the text using the mouse.
2. Format -> Columns 
3. Change to 2 Columns.
4. In spacing, change to 2.00".
5. Press Enter. Dialog box closes.

Expected Result: The spacing in between columns is changed, as if the user had clicked "OK".

Actual Result: Spacing does not change. The user can reopen the Columns dialog and resubmit the changes, and click OK with the mouse. Then changes are applied.

Version: 4.0.1.2 (Build ID: 84102822e3d61eb989ddd325abf1ac077904985)
Platform: Ubuntu Linux x64

STATUS: NEW
PRIORITY: NORMAL, MEDIUM

------------------------------------------

LibreOffice is powered by a team of volunteers, every bug is confirmed (triaged) by human beings who mostly give their time for free. We invite you to join our triaging by checking out this link: https://wiki.documentfoundation.org/QA/BugTriage  There are also other ways to get involved including with marketing, UX, documentation, and of course developing -  http://www.libreoffice.org/get-help/mailing-lists
Comment 2 Jorendc 2013-03-25 22:03:46 UTC
I cannot reproduce this behavior (anymore?) using Linux Mint 14 x64 and LibreOffice Version 4.0.2.1 (Build ID: 7e5467ff8f30d821f4fbf69cb2769163eb64c2c).

@Brenda, Zoltan: any chance to retest using 4.0.2.1 (which you can download here http://www.libreoffice.org/download/pre-releases/ )?

Kind regards,
Joren
Comment 3 Brenda Granados 2013-03-28 14:01:47 UTC
@Jorendc : I did retest this, and it is no longer a bug for Version 4.0.2.1. 

I will close this as RESOLVED- works for me.

@Zoltan : If this is still an issue for you, please let us know additional information, including platform and which version of Writer you are using. You can then REOPEN the bug.

Version: 4.0.2.1 (Build ID: 7e5467ff8f30d821f4fbf69cb2769163eb64c2c)
Platform: Ubuntu Linux 12.04 LTS x64

-Brenda
Comment 4 Zoltán Hegedüs 2013-11-16 15:15:33 UTC
RELAPSE: come back to 4.0.6.2 release.
Comment 5 Jorendc 2013-12-28 12:24:48 UTC
Indeed, reproducible using Windows 8 with LibreOffice Version: 4.1.4.2
Build ID: 0a0440ccc0227ad9829de5f46be37cfb6edcf72

So lets mark this as a bug of 4.0.6.2, as mentioned in Comment 4. And as a regression versus 4.0.2.1 (last version 2 independent users can't reproduce it anymore.
Comment 6 Michael Stahl (allotropia) 2014-02-13 14:17:40 UTC
for me this behaves the same in master and 4.0.6.2 as in older versions:

if you type in the numbers in the "Spacing" field then the preview in the upper left does not update and pressing Enter does not apply the Spacing.

if you instead click on the up/down arrows or use Cursor Up/Down keys
to modify the value then the preview will update and Enter will apply Spacing.

removing "regression"
Comment 7 Commit Notification 2014-02-17 16:19:43 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7d040153e8929f4a5a3362f04cd25e6ddb4d9f2c

Resolves: fdo#61704 update on modify, not up/down/lose-focus



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.