Resolves: fdo#61704 update on modify, not up/down/lose-focus

Change-Id: Ife98beb24d43f0e58f47c654ad8ef9605e5e3ffc